# Intro2Ros_Quadruped_Project

./: Gantt_Team22.xlsx  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/controller_pkg/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/depth2cloud/: .catkin  .rosinstall  setup.sh
devel/.private/depth_image_proc/: .catkin  local_setup.sh  setup.sh
devel/.private/fla_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/fla_utils/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mav_comm/: .catkin  .rosinstall  local_setup.sh
devel/.private/mav_msgs/: .catkin  (+3 more)
logs/controller_pkg/: build.check.012.log.stderr
logs/depth2cloud/: build.check.007.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr
logs/random_tree_planning/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/simulation/: build.make.000.log.stderr  build.make.017.log.stderr  build.make.025.log.stderr
logs/voxel_mapping/: build.check.004.log.stderr  build.make.000.log.stderr
src/controller_pkg/: CMakeLists.txt  package.xml
src/controller_pkg/launch/: mylaunchfile.launch  planning.launch
src/controller_pkg/src/: controller_node.cpp  controller_node_direct_run.cpp  state_machine_node.cpp  traj_publisher.cpp  trajectory_node.cpp
src/depth2cloud/: CMakeLists.txt  package.xml
src/planning/: CMakeLists.txt  package.xml
src/plumbing_dog/: CMakeLists.txt  package.xml
src/point_cloud_filter/: package.xml
src/random_tree_planning/: CMakeLists.txt  package.xml
src/voxel_mapping/: CMakeLists.txt  package.xml
(+800 files in other folders)
